fix delete+update